Fixed the input text lagging behind typing

--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -27,13 +27,17 @@ h5,
 h6,
 p,
 a,
-input,
 button,
 textarea,
 code,
 span {
   opacity: 0;
   transition: all 250ms ease-in-out;
+}
+
+/* Having transaction: all makes the input text lag behind typing.  Just opacity is fine. */
+input {
+  transition: opacity 250ms ease-in-out;
 }
 
 .wf-active h1,
